--- a/src/main/webapp/pages/depSalud/medicina/listaConsultas.xhtml
+++ b/src/main/webapp/pages/depSalud/medicina/listaConsultas.xhtml
@@ -26,6 +26,7 @@
     <ui:define name="content-pre" >
         <h:form id="form-pre">
             <h:panelGroup style="margin-top: -15px;">
+                <label style="margin-left: -30%; width: 30%"><b>#{'Ingrese Fechas de busqueda:'}</b></label>&nbsp;
                 <p:calendar value="#{consultaMedicaListaServicio.inicio}" pattern="yyyy-MM-dd" title="fecha Inicio" >
                     <p:ajax event="dateSelect" />
                 </p:calendar>                    
