--- a/src/main/webapp/pages/farmacia/medicamento/cardex.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/cardex.xhtml
@@ -23,22 +23,22 @@
             <div class="header-replace">
                 <div class="container-header" >
                     <div class="row lf row-title" >
-                        <h3>#{messages['farmacia.cardex.control']} #{cardexHome.medicamento.nombreComercial}</h3>
+                        <h3>#{messages['farmacia.cardex.control']} #{cardexHome.medicamento.nombreComercial}</h3>                        
                     </div>
                 </div>
             </div>
         </ui:define>
         <ui:define name="content-pre" >
             <h:form id="form1">
-                <div style="float: right; margin-top: -20px" >                    
+                <div style="margin-top: 0px; margin-left: " >                    
+                    <label style="margin-left: -30%; width: 30%"><b>#{'Ingrese Fechas de busqueda:'}</b></label>&nbsp;
                     <p:calendar value="#{cardexHome.fechaI}" pattern="yyyy-MM-dd" title="fecha Inicio"  >
                         <p:ajax event="dateSelect"/>
-                    </p:calendar>
-                    #{' -- '}
+                    </p:calendar>                    
                     <p:calendar value="#{cardexHome.fechaF}" pattern="yyyy-MM-dd" title="fecha fin" style="width: 20%">
                         <p:ajax event="dateSelect"/>  <!-- rendered="buscar1" update="buscar1"-->
                     </p:calendar>
-                    &nbsp;&nbsp;
+                    &nbsp;
                     <p:commandButton id="buscar1" value="Buscar" action="#{cardexHome.buscarPorFechas()}" immediate="true" 
                                      update=":form:tablaCardex"/>
                     &nbsp;
@@ -49,8 +49,8 @@
             </h:form>
         </ui:define>
         <ui:define name="content" >
-            <h:form id="form">      
-                <h3><center>#{messages['medicamento.Nombre']}: #{cardexHome.medicamento.nombreComercial}</center></h3>
+            <h:form id="form">                    
+                <h3 ><center>#{messages['medicamento.Nombre']}: #{cardexHome.medicamento.nombreComercial}</center></h3>
                 <div class="container-fluid">
                     <div class="row-fluid">
                         <div class="span7">
