--- a/src/main/webapp/pages/depSalud/listaFichaMedica.xhtml
+++ b/src/main/webapp/pages/depSalud/listaFichaMedica.xhtml
@@ -70,8 +70,8 @@
                 &nbsp;
                 <p:commandButton id="agregar-consulta" value="Nueva Consulta" action="#{fichaMedicaListaServicio.nuevaConsulta()}" styleClass="btn"
                                  disabled="#{empty fichaMedicaListaServicio.fichaMedicSeleccionada}" onclick="#{'imgDlg.show();'}"/>   
-                <p:panel id="img_p" widgetVar="imgDlg" style="display:none;">
-                    <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" />
+                <p:panel id="img_p" widgetVar="imgDlg" style="display:none; width: 30px;" >
+                    <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" style="margin-left: -5px"/>
                 </p:panel> 
 
             </div>
