--- a/src/main/webapp/pages/depSalud/odontologia/listaConsultaOdontologica.xhtml
+++ b/src/main/webapp/pages/depSalud/odontologia/listaConsultaOdontologica.xhtml
@@ -137,6 +137,7 @@
                     <p:graphicImage value="/resources/images/pdf.png" />                          
                     <f:setPropertyActionListener value="#{consultaOdontListaS.fechaI}" target="#{reporteListas.fechaInf}"/>
                     <f:setPropertyActionListener value="#{consultaOdontListaS.fechaF}" target="#{reporteListas.fechaSup}"/>
+                    <f:setPropertyActionListener value="#{consultaOdontListaS.resultList}" target="#{reporteListas.consulOdont}"/>
                 </h:commandLink>                
             </h:panelGroup>
         </h:form>
