--- a/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
@@ -76,7 +76,7 @@
                                         <f:selectItem itemLabel="Sobres" itemValue="Sobres" />  
                                         <f:selectItem itemLabel="Jarabe" itemValue="Jarabe" />                              
                                         <f:selectItem itemLabel="Gotero" itemValue="Gotero" />  
-                                        <f:selectItem itemLabel="Suspención" itemValue="Suspención" />
+                                        <f:selectItem itemLabel="Suspensión" itemValue="Suspensión" />
                                         <f:selectItem itemLabel="Crema" itemValue="Crema" />  
                                         <p:ajax event="change" update="@parent " partialSubmit="true"/>
                                     </p:selectOneMenu>        
