--- a/src/main/webapp/pages/farmacia/medicamento/agregarM.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/agregarM.xhtml
@@ -98,13 +98,15 @@
                                                          effect="fade" var="m" styleClass="xLarge" >  
                                             <f:selectItem itemLabel="#{messages['common.choice']}" itemValue="" />  
                                             <f:selectItem itemLabel="Ampollas" itemValue="Ampollas" />  
-                                            <f:selectItem itemLabel="Pastillas" itemValue="Pastillas" />                                          
+                                            <f:selectItem itemLabel="Comprimidos" itemValue="Comprimidos" />
                                             <f:selectItem itemLabel="Cápsulas" itemValue="Cápsulas" />
                                             <f:selectItem itemLabel="Tabletas" itemValue="Tabletas" />  
+                                            <f:selectItem itemLabel="Supositorios" itemValue="Supositorios" />
                                             <f:selectItem itemLabel="Sobres" itemValue="Sobres" />  
                                             <f:selectItem itemLabel="Jarabe" itemValue="Jarabe" />                              
+                                            <f:selectItem itemLabel="Gotero" itemValue="Gotero" />  
+                                            <f:selectItem itemLabel="Suspensión" itemValue="Suspensión" />
                                             <f:selectItem itemLabel="Crema" itemValue="Crema" />  
-                                            <f:selectItem itemLabel="Pomada" itemValue="Pomada" />  
                                             <p:ajax event="change" update="@parent " partialSubmit="true"/>
                                         </p:selectOneMenu>        
                                         <h:graphicImage value="#{resource['success.gif']}" rendered="#{medicamentoHome.instance.presentacion!= null}"
@@ -201,8 +203,8 @@
                                 value="Borrar todo" styleClass="btn primary">                         
                         </h:link>
                         <p:panel id="img_p" widgetVar="imgDlg" style="display:none; width: 30px;" >
-                        <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" style="margin-left: -5px"/>
-                    </p:panel>
+                            <h:graphicImage id="img-spinner" value="/resources/js/loader.gif" style="margin-left: -5px"/>
+                        </p:panel>
                     </center>
                 </div>
             </h:form>
